--- a/Edu_Store/Edu_Store/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/Edu_Store/Edu_Store/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -4,21 +4,23 @@
     ViewData["Title"] = "Forgot your password?";
 }
 
-<h1>@ViewData["Title"]</h1>
-<h2>Enter your email.</h2>
-<hr />
+
+<h1 class="text-center text-primary">@ViewData["Title"]</h1>
 <div class="row">
-    <div class="col-md-4">
+    <div class="mx-auto col-3 col-md-4 col-lg-4 offset-8 border border-dark rounded p-3 my-4">
+    <div>
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
             <div class="form-floating mb-3">
+                <label asp-for="Input.Email" class="form-label" class="form-label text-dark pl-4"></label>
                 <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
-                <label asp-for="Input.Email" class="form-label"></label>
+                
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Reset Password</button>
+                <button type="submit" class="w-50 btn btn-lg btn-primary d-block m-auto">Reset Password</button>
         </form>
     </div>
+</div>
 </div>
 
 @section Scripts {
