--- a/Edu_Store/Edu_Store/Areas/Identity/Pages/Account/Logout.cshtml
+++ b/Edu_Store/Edu_Store/Areas/Identity/Pages/Account/Logout.cshtml
@@ -5,17 +5,19 @@
 }
 
 <header>
-    <h1>@ViewData["Title"]</h1>
-    @{
-        if (User.Identity?.IsAuthenticated ?? false)
-        {
-            <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new { area = "" })" method="post">
-                <button type="submit" class="nav-link btn btn-link text-dark">Click here to Logout</button>
-            </form>
+    <div class="mx-auto col-3 col-md-4 col-lg-6 offset-6 border border-dark rounded p-3 my-4">
+        <h1 class="text-center text-primary">@ViewData["Title"]</h1>
+        @{
+            if (User.Identity?.IsAuthenticated ?? false)
+            {
+                <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new { area = "" })" method="post">
+                    <button type="submit" class="d-block mx-auto nav-link btn btn-danger text-light m-4">Click here to Logout</button>
+                </form>
+            }
+            else
+            {
+                <p class="text-center">You have successfully logged out of the application.</p>
+            }
         }
-        else
-        {
-            <p>You have successfully logged out of the application.</p>
-        }
-    }
+   </div>
 </header>
