--- a/Edu_Store/Edu_Store/Views/TeacherDashboard/CreateLecture.cshtml
+++ b/Edu_Store/Edu_Store/Views/TeacherDashboard/CreateLecture.cshtml
@@ -36,7 +36,7 @@
                                     </div>
                                     <div class="form-group form-group-lg">
                                         <div class="form-line">
-                                            <textarea asp-for="LectureTime_MS" class="form-control" placeholder="Description"></textarea>
+                                            <input type="number" asp-for="LectureTime_MS" class="form-control" placeholder="Description"/>
                                             <span asp-validation-for="LectureTime_MS" class="text-danger"></span>
                                         </div>
                                     </div>
