--- a/Edu_Store/Edu_Store/Views/Cart/Index.cshtml
+++ b/Edu_Store/Edu_Store/Views/Cart/Index.cshtml
@@ -9,6 +9,10 @@
 @*<p>
     <a asp-action="Create">Create New</a>
 </p>*@
+@if (Model.Count() != 0)
+{
+    
+<form method="post" asp-controller="Cart" asp-action="GetCourse">
 <div class="container">
 <table class="table">
     <thead>
@@ -26,6 +30,7 @@
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Course.Title)
+                <input type="hidden" name="@("input_"+item.CourseID)" value="@item.CourseID">
             </td>
             <td>
                 <a asp-controller="Course" asp-action="Details" asp-route-id="@item.CourseID">Details</a> |
@@ -37,6 +42,17 @@
     </tbody>
 </table>
 </div>
-<form method="post" asp-controller="" asp-action="">
     <input type="submit" value="Get Courses" style="background:#ff5a2c;font-weight:500;color:white;font-size:12px;height:36px;line-height:36px;width:80px;display:flex;justify-content:center;margin:auto;margin-bottom:10px;" />
-</form>
+    </form>
+}
+else
+{
+    <br />
+    <br />
+    <center> 
+
+    <h2 class="text-danger">CART IS EMPTY</h2>
+    </center>
+    <br />
+    <br />
+}
