--- a/Edu_Store/Edu_Store/Views/Home/viewCourses.cshtml
+++ b/Edu_Store/Edu_Store/Views/Home/viewCourses.cshtml
@@ -49,7 +49,8 @@
                         <div class="center col-12 col-sm-6 col-md-6 col-lg-4">
                             <div class="single-courses">
                                 <div class="courses_banner_wrapper">
-                                        <div class="courses_banner"> <a asp-action="Details" asp-route-id="@item.CourseID"><img src=@item.image alt="" asp-append-version="true" class="img-fluid"></a>
+                                <div class="courses_banner">
+                                    <a asp-controller="Course" asp-action="PreviewCourse" asp-route-courseID="@item.CourseID"><img src=@item.image alt="" asp-append-version="true" class="img-fluid"></a>
 
                 </div>
                                     <div class="purchase_price">
@@ -59,7 +60,7 @@
                                 <div class="courses_info_wrapper">
                                     <div class="courses_title">
                                         <h3><a href="#">@item.Title</a></h3>
-                                <div class="teachers_name">Teacher - <a href="#" title="">@*@item.Teacher.Name*@</a></div>
+
                                     </div>
                                     <div class="courses_info">
                                         <ul class="list-unstyled">
