--- a/Edu_Store/Edu_Store/Views/Shared/_Layout.cshtml
+++ b/Edu_Store/Edu_Store/Views/Shared/_Layout.cshtml
@@ -59,7 +59,8 @@
             HeaderName = "header_inner courses_page";
         else if (ViewBag.Title == "Details")
             HeaderName = "header_inner blog_page";
-
+        else if ( ViewBag.Title == "Preview Course" )
+            HeaderName = "header_inner blog_page";
     }
 
 
@@ -89,7 +90,9 @@
                                 <li class="nav-item">
                                 <a   asp-area="Identity"  asp-page="/Account/Logout" class="nav-link join_now js-modal-show"><i class="flaticon-padlock"></i>Log out</a></li>
 
-
+                                        <li class="nav-item">
+                                            <a asp-controller="Cart" asp-action="Index"> MY Cart<i class="bi bi-cart-fill" style="margin-right:20px;color:white;"></i></a>
+                                 </li>
                                 }
                                 else{
                                     <li class="nav-item"><a  asp-area="Identity"  asp-page="/Account/Register" class="nav-link sign-in js-modal-show"><i class="flaticon-user-male-black-shape-with-plus-sign"></i>Register</a></li>
@@ -99,7 +102,7 @@
 
 
                                 </ul>
-                               <a asp-controller="Cart" asp-action="Index"> <i class="bi bi-cart-fill" style="margin-right:20px;color:white;"></i></a>
+                              
 
                                 <a href="#" title="" class="apply_btn">Apply Now</a>
                             </div>
@@ -131,64 +134,11 @@
                             <li class="nav-item">
                                 <a asp-controller="Course" asp-action="Index" class="nav-link">Courses</a>
                             </li>
-                            <li class="nav-item">
-                                <a href="blog.html" class="nav-link">Blog</a>
-                                <ul class="navbar-nav nav mx-auto">
-                                    <li class="nav-item"><a href="blog.html" class="nav-link">Blog List</a></li>
-                                    <li class="nav-item"><a href="blog-2.html" class="nav-link">Blog Grid One</a></li>
-                                    <li class="nav-item"><a href="blog-3.html" class="nav-link">Blog Grid Two</a></li>
-                                    <li class="nav-item"><a href="blog-details.html" class="nav-link">Blog Details</a></li>
-                                </ul>
-                            </li>
-                            <li class="nav-item">
-                                <a href="#" class="nav-link">Pages</a>
-                                <ul class="navbar-nav nav mx-auto">
-                                    <li class="nav-item">
-                                        <a href="#" class="nav-link dropdown_icon">Courses</a>
-                                        <ul class="navbar-nav nav mx-auto">
-                                            <li class="nav-item"><a href="course.html" class="nav-link">Courses</a></li>
-                                            <li class="nav-item"><a href="course-details.html" class="nav-link">Courses Details</a></li>
-                                        </ul>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a href="#" class="nav-link dropdown_icon">Events</a>
-                                        <ul class="navbar-nav nav mx-auto">
-                                            <li class="nav-item"><a href="event.html" class="nav-link">Event</a></li>
-                                            <li class="nav-item"><a href="event-details.html" class="nav-link">Event Details</a></li>
-                                        </ul>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a href="#" class="nav-link dropdown_icon">Blog</a>
-                                        <ul class="navbar-nav nav mx-auto">
-                                            <li class="nav-item"><a href="blog.html" class="nav-link">Blog List</a></li>
-                                            <li class="nav-item"><a href="blog-2.html" class="nav-link">Blog Grid One</a></li>
-                                            <li class="nav-item"><a href="blog-3.html" class="nav-link">Blog Grid Two</a></li>
-                                            <li class="nav-item"><a href="blog-details.html" class="nav-link">Blog Details</a></li>
-                                        </ul>
-                                    </li>
-                                    <li class="nav-item"><a href="become-a-teacher.html" class="nav-link">Become A Teacher</a></li>
-                                    <li class="nav-item"><a href="teacher-profile.html" class="nav-link">Teachers Profile</a></li>
-                                    <li class="nav-item"><a href="team.html" class="nav-link">Teachers Page</a></li>
-                                    <li class="nav-item"><a href="forgot-password.html" class="nav-link">Forgot Password</a></li>
-                                </ul>
-                            </li>
-                            <li class="nav-item"><a  asp-controller="Home" asp-action="Contact" class="nav-link">Contact</a></li>
+                           
+                      <li class="nav-item"><a  asp-controller="Home" asp-action="Contact" class="nav-link">Contact</a></li>
                         </ul>
                     </div>
-                    <div class="mr-auto search_area ">
-                        <ul class="navbar-nav mx-auto">
-                            <li class="nav-item">
-                                <i class="search_btn flaticon-magnifier"></i>
-                                <div id="search">
-                                    <button type="button" class="close">×</button>
-                                    <form>
-                                        <input type="search" value="" placeholder="Search here...." required />
-                                    </form>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                </nav><!-- END NAVBAR -->
+                   </nav><!-- END NAVBAR -->
             </div>
         </div>
             @RenderBody()
